# effective-splendor

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: baseline.json
crates/splendor-arena/: Cargo.toml
crates/splendor-arena/src/: config.rs  controller.rs  error.rs  lib.rs  process.rs  report.rs  runner.rs  seed_commitment.rs
crates/splendor-arena/src/runner/: tests.rs
crates/splendor-arena/tests/: config.rs  process.rs  runner_process.rs  seed_commitment.rs
crates/splendor-catalog/: Cargo.toml
crates/splendor-catalog/src/: cards.rs  lib.rs  nobles.rs  ruleset.rs
crates/splendor-cli/: Cargo.toml
crates/splendor-cli/src/: main.rs
crates/splendor-core/: Cargo.toml
crates/splendor-core/src/: action.rs  error.rs  events.rs  gems.rs  hash.rs  lib.rs  observation.rs  state.rs
crates/splendor-core/tests/: invariants.rs
crates/splendor-protocol/: Cargo.toml
crates/splendor-protocol/src/: lib.rs
crates/splendor-protocol/tests/: leak.rs  strict_parse.rs
crates/splendor-replay/: Cargo.toml
crates/splendor-replay/src/: compat.rs  error.rs  format.rs  lib.rs  recorder.rs  verify.rs
crates/splendor-replay/tests/: recorder.rs  roundtrip.rs  tamper.rs
docs/: architecture.md  protocol.md  replay.md
docs/adr/: 0001-information-boundary.md  0002-hash-and-replay-identity.md  0003-rules-closure.md  0004-replay-v1.md
fixtures/arena/v1/: illegal-action-2p.report.json  normal-2p-seed42.report.json
fixtures/protocol/v0.2/: blind-reserve.ndjson  normal-game.ndjson
fixtures/protocol/v0.3/: blind-reserve.ndjson  normal-game.ndjson
fixtures/protocol/v0.4/: blind-reserve.ndjson  normal-game.ndjson
fixtures/protocol/v0.5/: blind-reserve.ndjson  normal-game.ndjson
fixtures/replay/v1/: normal-2p-seed42.json
scripts/: bench.sh
