[workspace]
resolver = "2"
members = [
    "crates/splendor-catalog",
    "crates/splendor-core",
    "crates/splendor-protocol",
    "crates/splendor-cli",
]
default-members = [
    "crates/splendor-catalog",
    "crates/splendor-core",
    "crates/splendor-protocol",
    "crates/splendor-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zxjAiLun/effective-splendor"
rust-version = "1.75"

[workspace.dependencies]
splendor-catalog = { path = "crates/splendor-catalog" }
splendor-core = { path = "crates/splendor-core" }
splendor-protocol = { path = "crates/splendor-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = { version = "0.8", features = ["small_rng"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
proptest = "1"
