[package]
name = "splendor-arena"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zxjAiLun/effective-splendor"
rust-version = "1.75"

[dependencies]
splendor-core = { workspace = true }
splendor-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[[bin]]
name = "arena-fixture"
path = "src/bin/arena_fixture.rs"

[dev-dependencies]
