[package]
name = "splendor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Splendor self-play, replay check, and benchmarks"

[[bin]]
name = "splendor"
path = "src/main.rs"

[dependencies]
splendor-core = { workspace = true }
splendor-protocol = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
