[package]
name = "splendor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic Splendor rules engine with FullState / Observation isolation"

[dependencies]
splendor-catalog = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
