[package]
name = "splendor-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NDJSON message types for Splendor agent protocol"

[dependencies]
splendor-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
